--- a/package.json
+++ b/package.json
@@ -17,5 +17,17 @@
     "express": "^4.18.1",
     "path": "^0.12.7",
     "three": "^0.143.0"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
